--- a/index.html
+++ b/index.html
@@ -169,7 +169,8 @@
     <!-- JavaScript Logic -->
     <script>
         // --- API Configuration ---
-        const HF_API_KEY = "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";
+        // UPDATED HUGGING FACE API KEY
+        const HF_API_KEY = "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";
         const HF_API_ENDPOINT = "https://api-inference.huggingface.co/models/stabilityai/stable-diffusion-xl-base-1.0";
         const GEMINI_API_MODEL = "gemini-2.5-flash-preview-05-20";
         const GEMINI_API_KEY = ""; // Placeholder, Canvas provides this at runtime
@@ -474,4 +475,3 @@
     </script>
 </body>
 </html>
-
